--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,13 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon -w src -e ts --exec 'ts-node ./src/index.ts'"
+    "dev": "cross-env NODE_ENV=development nodemon -w src -e ts --exec 'ts-node ./src/index.ts'",
+    "build:start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "zod": "^3.24.2"
