--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "cross-env NODE_ENV=development nodemon -w src -e ts --exec 'ts-node ./src/index.ts'",
+    "dev": "cross-env NODE_ENV=development nodemon -w src -e ts,json --exec 'ts-node ./src/index.ts'",
     "build:start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
@@ -14,7 +14,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.2"
   },
