--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "cross-env NODE_ENV=development nodemon -w src -e ts,json --exec 'ts-node ./src/index.ts'",
+    "dev": "cross-env NODE_ENV=development nodemon -w src -w docs -e ts --exec 'ts-node ./src/index.ts'",
     "build:start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
