Update package names and versions in backend and frontend configuration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "frontend-by-abdullah",
-  "private": true,
+  "name": "posify",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
